--- a/maku-boot-module/maku-module-iot/pom.xml
+++ b/maku-boot-module/maku-module-iot/pom.xml
@@ -19,6 +19,11 @@
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-mqtt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!-- JUnit 依赖 -->
         <dependency>
