--- a/maku-server/src/main/resources/application-prod.yml
+++ b/maku-server/src/main/resources/application-prod.yml
@@ -34,10 +34,8 @@ spring:
           #    username: postgres
           #    password: 123456
   mqtt:
-    hostUrl: tcp://localhost:1883
+    host: tcp://localhost:1883
     username: maku
     password: maku
     clientId: maku_boot_service_dev
-    defaultTopic: topic_default
-    #true 开启监听 false 关闭监听  用于监设备上报的信息
-    mqttEnabled: false
+    default-topic: topic_default
