解决knife4j不支持springboot3.4

--- a/maku-server/src/main/resources/application.yml
+++ b/maku-server/src/main/resources/application.yml
@@ -13,7 +13,7 @@ server:
         http-only: true
 
 knife4j:
-  enable: true
+  enable: false
   setting:
     custom-code: 500
     enable-footer-custom: false
