--- a/maku-framework/pom.xml
+++ b/maku-framework/pom.xml
@@ -80,8 +80,8 @@
             <artifactId>hutool-all</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>easyexcel</artifactId>
+            <groupId>cn.idev.excel</groupId>
+            <artifactId>fastexcel</artifactId>
         </dependency>
         <dependency>
             <artifactId>okio</artifactId>
