--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <lock4j.version>2.2.7</lock4j.version>
         <dameng.version>8.1.2.79</dameng.version>
         <knife4j.version>4.5.0</knife4j.version>
+        <springdoc.version>2.8.4</springdoc.version>
         <hutool.version>5.8.28</hutool.version>
         <captcha.version>1.6.2</captcha.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
@@ -108,6 +109,11 @@
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>${springdoc.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.hutool</groupId>
