--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
         <springdoc.version>2.8.4</springdoc.version>
         <hutool.version>5.8.28</hutool.version>
         <captcha.version>1.6.2</captcha.version>
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <aliyun.oss.version>3.15.2</aliyun.oss.version>
+        <mapstruct.version>1.6.3</mapstruct.version>
+        <aliyun.oss.version>3.17.4</aliyun.oss.version>
         <aliyun.dysmsapi.version>2.0.23</aliyun.dysmsapi.version>
         <tencentcloud.sdk.version>3.1.574</tencentcloud.sdk.version>
         <qiniu.version>7.12.1</qiniu.version>
