--- a/maku-boot-system/pom.xml
+++ b/maku-boot-system/pom.xml
@@ -67,7 +67,7 @@
 <!--        </dependency>-->
         <dependency>
             <groupId>com.tencentcloudapi</groupId>
-            <artifactId>tencentcloud-sdk-java</artifactId>
+            <artifactId>tencentcloud-sdk-java-sms</artifactId>
         </dependency>
         <!--阿里云邮件sdk-->
         <dependency>
